clusters/k3s-hetzner/kyverno/policies.disabled/disallow-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: disallow-latest
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - argocd
                - kyverno
                - cert-manager
      validate:
        message: "Avoid using the ':latest' tag."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
